# Block-Worlds-Problem-Solved-Using-A-Algorithm-on-ROS2-Platform

./: A*_block_world_report  README.md
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/task_publisher/share/task_publisher/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
task_publisher/: setup.cfg  setup.py
task_publisher/task_publisher/: task_publisher_node.py
task_subscriber/: CMakeLists.txt  package.xml
task_subscriber/src/: readme_BS_task  task_subscriber.cpp
